# django-ninja-example

./: .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: exceptions.py  models.py  use_cases.py
core/apps/customers/: admin.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_token.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  containers.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/exceptions/: products.py  reviews.py
core/apps/products/migrations/: 0001_initial.py  0002_alter_product_options_review.py
core/apps/products/models/: products.py  reviews.py
core/apps/products/services/: products.py  reviews.py
core/apps/products/use_cases/products/: create.py  delete.py
core/apps/products/use_cases/reviews/: create.py  delete.py  get.py
core/project/: containers.py  urls.py
core/project/settings/: local.py  main.py
docker_compose/: app.yaml  storages.yaml
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
